[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-enricher"
version = "0.1.0"
description = "OSINT enrichment toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["osint", "nlp", "data-engineering", "intelligence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tweepy>=4.14.0",
    "praw>=7.7.1",
    "feedparser>=6.0.10",
    "spacy>=3.7.2",
    "langdetect>=1.0.9",
    "transformers>=4.35.0",
    "torch>=2.2.0",
    "geopy>=2.4.1",
    "folium>=0.14.0",
    "reportlab>=4.0.8",
    "streamlit>=1.32.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "apscheduler>=3.10.4",
    "PyYAML>=6.0.1",
    "boto3>=1.34.0",
    "pandas>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/gnudrus/osint-enricher"
