[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-enricher"
version = "0.2.0"
description = "A local-first OSINT ingestion, enrichment, alerting and reporting toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "gnudrus"}]
keywords = ["osint", "nlp", "data-engineering", "intelligence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.110.0",
    "feedparser>=6.0.10",
    "folium>=0.14.0",
    "geopy>=2.4.1",
    "langdetect>=1.0.9",
    "pandas>=2.2.0",
    "praw>=7.7.1",
    "pyarrow>=15.0.0",
    "pydeck>=0.8.1b0",
    "PyYAML>=6.0.1",
    "reportlab>=4.0.8",
    "requests>=2.31.0",
    "streamlit>=1.32.0",
    "tweepy>=4.14.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.2",
    "transformers>=4.35.0",
    "torch>=2.2.0",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/gnudrus/osint-enricher"
Repository = "https://github.com/gnudrus/osint-enricher"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
